# DRVN

./: CMakeLists.txt  Makefile  README.txt  drvn  idea  todo.txt
UniversData/: version1  version10  version11  version12  version13  version14  version15  version16  version17  version19  version2  version20  version21  version3  version4  version5  version6  version7  version8  version9
assets/: capacity.txt
proto/: MU.h  death.h  eugenism.h  event.h  game.h  graphFunctions.h  initialisation.h  land.h  landInit.h  landInitialisation.h  loop.h  memoryRelease.h  populationInit.h  posterity.h  reproduction.h  supervisor.h  think.h  univers.h
source/: MU.c  Uassets.c  initialisation.c  landInit.c  main.c  memoryRelease.c  populationInit.c  univers.c
source/Game/: death.c  event.c  loop.c  move.c  reproduction.c  survival.c
source/Graphical/: graphFunctions.c  sdlEvent.c
source/Initialisation/: landInit.c  populationInit.c  univers.c
source/evolution/: eugenism.c  posterity.c  think.c
